--- a/src/notebooks/featureModel/TestingSecondModels.ipynb
+++ b/src/notebooks/featureModel/TestingSecondModels.ipynb
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "0rZLc6TQHtgd",
         "colab_type": "code",
-        "outputId": "3ac1891a-c0c6-446a-a756-b037f70350f0",
+        "outputId": "02752622-1707-4e38-e49c-87df86511642",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -112,7 +112,7 @@
         "  print(\"Error occured during reading file!\")\n",
         "  print(\"Probably you don't have featureModelPlPresup.h5 in your working directory!\\n\")  "
       ],
-      "execution_count": 45,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,6 +120,64 @@
             "Model featureModelEng.h5 read successfully!\n",
             "Model featureModelPl.h5 read successfully!\n",
             "Model featureModelPl.h5 read successfully!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "85hbAzmeFjjg",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Read data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J--II8tbFnCG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "46784505-8df0-4116-9e62-6b8e8c7a94da"
+      },
+      "source": [
+        "try:\n",
+        "  training_eng_data = pd.read_csv(\"engData.csv\", index_col=None)\n",
+        "  print(\"English data read successfuly!\")\n",
+        "except:\n",
+        "  print(\"Error occured during reading file!\")\n",
+        "  print(\"Probably you don't have engData.csv in your working directory! \\n\")\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "  training_pl_data = pd.read_csv(\"plData.csv\", index_col=None)\n",
+        "  print(\"Polish data read successfuly!\")\n",
+        "except:\n",
+        "  print(\"Error occured during reading file!\")\n",
+        "  print(\"Probably you don't have plData.csv in your working directory! \\n\")\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "  training_pl_presup_data = pd.read_csv(\"plDataPresup.csv\", index_col=None)\n",
+        "  print(\"POlish pressuposition data read successfuly!\")\n",
+        "except:\n",
+        "  print(\"Error occured during reading file!\")\n",
+        "  print(\"Probably you don't have plDataPresup.csv in your working directory! \\n\")"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "English data read successfuly!\n",
+            "Polish data read successfuly!\n",
+            "POlish pressuposition data read successfuly!\n"
           ],
           "name": "stdout"
         }
@@ -153,13 +211,17 @@
         "colab": {}
       },
       "source": [
-        "eng_verb_veridical_positive       = \"\" # possible values (o, ?, +, -)\n",
-        "eng_verb_veridical_negative       = \"\" # possible values (o, ?, +, -)\n",
-        "eng_semantic_characteristic       = \"\" # possible values (epistemiczny, emotywny, mówienia, ontyczn, ...y)\n",
-        "eng_standford_signature_for_that  = \"\" # possible values (o/o, none, nie ma, +/o, +/+, o/+)\n",
-        "eng_standford_signature_for_to    = \"\" # possible values (none, o/o)\n",
-        "eng_complementizer                = \"\" # possible values (that, to)\n",
-        "eng_verb_tense                    = \"\" # possible values (present, past, none, future, ?)"
+        "eng_verb_veridical_positive       = \"\" # possible values 'o', '+', '-', '?'\n",
+        "eng_verb_veridical_negative       = \"\" # possible values 'o', '+', '-', '?', '1'\n",
+        "eng_semantic_characteristic       = \"\" # possible values 'epistemiczny', 'emotywny', 'mówienia', 'ontyczny', 'wynikania',\n",
+        "                                       #                 'określające dostęp do wiedzy', 'percepcyjny', 'pamięciowy',\n",
+        "                                       #                 'odkrycia', 'czynnościowy', 'epistemiczno-percepcyjny',\n",
+        "                                       #                 'pokazywania', 'dowodzenia', 'mówieniowo-pamięciowy', 'liczenia',\n",
+        "                                       #                 'wnioskowania', 'percepcyjno-mówieniowy', 'zdarzeniowy'\n",
+        "eng_standford_signature_for_that  = \"\" # possible values 'o/o', 'none', 'nie ma', '\"+/o\"', '\"+/+\"', 'o/+'\n",
+        "eng_standford_signature_for_to    = \"\" # possible values 'none', 'o/o'\n",
+        "eng_complementizer                = \"\" # possible values 'that', 'to'\n",
+        "eng_verb_tense                    = \"\" # possible values 'present', 'past', 'none', 'future', '?'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -182,10 +244,10 @@
         "colab": {}
       },
       "source": [
-        "pl_verb_veridical_positive    = \"\" # possible values (o, ?, +, -)\n",
-        "pl_verb_veridical_negative    = \"\" # possible values (o, ?, +, -)\n",
-        "pl_verb_tense                 = \"\" # possible values (brak, past, present, future)\n",
-        "pl_t_negation                 = \"\" # possible values (0, 1)"
+        "pl_verb_main_semantic_class   = \"\" # possible values 'mówienia', 'epistemiczny', '?'\n",
+        "pl_verb_veridical_positive    = \"\" # possible values 'o' '?' '+' '-'\n",
+        "pl_verb_veridical_negative    = \"\" # possible values '?' '+' 'o' '-'\n",
+        "pl_verb_tense                 = \"\" # possible values 'brak' 'past' 'present' 'future'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -208,10 +270,10 @@
         "colab": {}
       },
       "source": [
-        "pl_presup_verb_veridical_positive    = \"\" # possible values (o, ?, +, -)\n",
-        "pl_presup_verb_veridical_negative    = \"\" # possible values (o, ?, +, -)\n",
-        "pl_presup_verb_tense                 = \"\" # possible values (brak, past, present, future)\n",
-        "pl_presup_t_negation                 = \"\" # possible values (0, 1)"
+        "pl_presup_verb_main_semantic_class        = \"\" # possible values 'mówienia', 'epistemiczny', '?'\n",
+        "pl_presup_verb_veridical_positive    = \"\" # possible values 'o' '?' '+' '-'\n",
+        "pl_presup_verb_veridical_negative    = \"\" # possible values '?' '+' 'o' '-'\n",
+        "pl_presup_verb_tense                 = \"\" # possible values 'brak' 'past' 'present' 'future'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -231,17 +293,13 @@
       "metadata": {
         "id": "s-EsnuR7bPDt",
         "colab_type": "code",
-        "outputId": "7c99ed3e-797f-473f-8ab3-02c888d9cf39",
+        "outputId": "b0b67e41-501b-4083-dd1b-9c9c52b543dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "training_eng_data = pd.read_csv(\"engData.csv\", index_col=None)\n",
-        "training_pl_data = pd.read_csv(\"plData.csv\", index_col=None)\n",
-        "training_pl_presup_data = pd.read_csv(\"plDataPresup.csv\", index_col=None)\n",
-        "\n",
         "#Check values \n",
         "# eng \n",
         "if eng_verb_veridical_positive not in training_eng_data.verb_veridial_positive.unique():\n",
@@ -260,30 +318,24 @@
         "  eng_verb_tense = \"none\"\n",
         "\n",
         "# pl \n",
+        "if pl_verb_main_semantic_class not in training_pl_data.verb_main_semantic_class.unique():\n",
+        "  pl_verb_main_semantic_class = \"?\"\n",
         "if pl_verb_veridical_positive not in training_pl_data.verb_veridical_positive.unique():\n",
         "  pl_verb_veridical_positive = \"?\"\n",
         "if pl_verb_veridical_negative not in training_pl_data.verb_veridical_negative.unique():\n",
         "  pl_verb_veridical_negative = \"?\"\n",
         "if pl_verb_tense not in training_pl_data.verb_tense.unique():\n",
         "  pl_verb_tense = \"brak\"\n",
-        "try:\n",
-        "  if int(pl_t_negation) not in training_pl_data.t_negation.unique():\n",
-        "    pl_t_negation = 0\n",
-        "except:\n",
-        "  pl_t_negation = 0\n",
         "\n",
-        "# pl presup \n",
+        "# pl presup\n",
+        "if pl_presup_verb_main_semantic_class not in training_pl_presup_data.verb_main_semantic_class.unique():\n",
+        "  pl_presup_verb_main_semantic_class = \"?\" \n",
         "if pl_presup_verb_veridical_positive not in training_pl_presup_data.verb_veridical_positive.unique():\n",
         "  pl_presup_verb_veridical_positive = \"?\"\n",
         "if pl_presup_verb_veridical_negative not in training_pl_presup_data.verb_veridical_negative.unique():\n",
         "  pl_presup_verb_veridical_negative = \"?\"\n",
         "if pl_presup_verb_tense not in training_pl_presup_data.verb_tense.unique():\n",
         "  pl_presup_verb_tense = \"brak\"\n",
-        "try:\n",
-        "  if int(pl_presup_t_negation) not in training_pl_presup_data.t_negation.unique():\n",
-        "    pl_presup_t_negation = 0\n",
-        "except:\n",
-        "  pl_presup_t_negation = 0\n",
         "\n",
         "# append to datasets\n",
         "# eng\n",
@@ -301,20 +353,20 @@
         "\n",
         "# pl\n",
         "training_pl_data = training_pl_data.append({\n",
+        " 'verb_main_semantic_class' : pl_verb_main_semantic_class,\n",
         " 'verb_veridical_positive': pl_verb_veridical_positive,\n",
         " 'verb_veridical_negative': pl_verb_veridical_negative,\n",
         " 'verb_tense': pl_verb_tense,\n",
-        " 't_negation': pl_t_negation,\n",
         " 'semantic_relation': \"?\"                                      \n",
         "},\n",
         "ignore_index=True)\n",
         "\n",
         "#pl presup\n",
         "training_pl_presup_data = training_pl_presup_data.append({\n",
+        " 'verb_main_semantic_class' : pl_presup_verb_main_semantic_class,\n",
         " 'verb_veridical_positive': pl_presup_verb_veridical_positive,\n",
         " 'verb_veridical_negative': pl_presup_verb_veridical_negative,\n",
         " 'verb_tense': pl_presup_verb_tense,\n",
-        " 't_negation': pl_presup_t_negation,\n",
         " 'presupposition': \"no\"                                      \n",
         "},\n",
         "ignore_index=True)\n",
@@ -330,12 +382,12 @@
         "pl_presup_entry_model = pl_presup_vectorized.tail(1)\n",
         "\n",
         "# get features\n",
-        "eng_input_model = eng_entry_model.iloc[:,1:-4] \n",
-        "pl_input_model = pl_entry_model.iloc[:,1:-4]\n",
-        "pl_presup_input_model = pl_presup_entry_model.iloc[:,1:-2]\n",
+        "eng_input_model = eng_entry_model.iloc[:,0:-4] \n",
+        "pl_input_model = pl_entry_model.iloc[:,0:-4]\n",
+        "pl_presup_input_model = pl_presup_entry_model.iloc[:,0:-2]\n",
         "print(\"Data prepared to use in model. Run cell \\\"Model test\\\"\")"
       ],
-      "execution_count": 49,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +413,7 @@
       "metadata": {
         "id": "Zey8w5GbvRQd",
         "colab_type": "code",
-        "outputId": "d73e4cac-7d6a-4eb4-ef0a-fa4f5609cf0f",
+        "outputId": "71200a20-808e-417d-8a92-65f0db4def23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -403,7 +455,7 @@
         "print(\"Your predicted semantic relation class in polish model is {}\".format(pl_prediction_class))\n",
         "print(\"Your predicted presupposition in polish model is {}\".format(pl_presup_prediction_class))"
       ],
-      "execution_count": 52,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
